--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Ethan Charbonniere — Game Developer & Game Designer</title>
-  <meta name="description" content="Portfolio d’Ethan Charbonniere, game developer et game designer : projets, compétences et contact." />
+  <meta name="description" content="Ethan Charbonniere, game developer & game designer " />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
@@ -236,7 +236,7 @@
 <section id="projects" aria-label="Projets">
   <div class="container">
     <h2 class="section-title">Projects</h2>
-    <p class="lead">Une sélection de travaux — prototypes, mécaniques de gameplay et expériences interactives.</p>
+ 
 
     <div class="grid">
       <!-- Project Card 1 -->
@@ -363,9 +363,9 @@ On the design side, I structure mechanics, difficulty, level design, and in-game
           <div>
             <p class="lead">Interested in collaborating on a project, prototype, or jam? Get in touch</p>
             <div class="socials" style="margin-top:10px">
-              <a class="pill" href="#" aria-label="Itch.io">itch.io</a>
-              <a class="pill" href="#" aria-label="GitHub">GitHub</a>
-              <a class="pill" href="#" aria-label=" LinkedIn">LinkedIn</a>
+              <a class="pill" href="https://onemorerollstudio.itch.io" aria-label="Itch.io">itch.io</a>
+              <a class="pill" href="https://github.com/Ballustrad" aria-label="GitHub">GitHub</a>
+              <a class="pill" href="www.linkedin.com/in/ethan-charbonniere-b22608243" aria-label=" LinkedIn">LinkedIn</a>
               
             </div>
            
