--- a/index.html
+++ b/index.html
@@ -335,7 +335,8 @@ On the design side, I structure mechanics, difficulty, level design, and in-game
         <div class="contact">
           <form id="contactForm" novalidate>
             <!-- Remplace par ton email pour le mode "mailto" -->
-            <input type="hidden" id="CONTACT_EMAIL" value= ethancharbonniere@gmail.com>
+            <input type="hidden" id="CONTACT_EMAIL" value="ethancharbonniere@gmail.com">
+
 
             <div>
               <label for="name">Nom</label>
@@ -365,7 +366,8 @@ On the design side, I structure mechanics, difficulty, level design, and in-game
             <div class="socials" style="margin-top:10px">
               <a class="pill" href="https://onemorerollstudio.itch.io" aria-label="Itch.io">itch.io</a>
               <a class="pill" href="https://github.com/Ballustrad" aria-label="GitHub">GitHub</a>
-              <a class="pill" href="www.linkedin.com/in/ethan-charbonniere-b22608243" aria-label=" LinkedIn">LinkedIn</a>
+         <a class="pill" href="https://www.linkedin.com/in/ethan-charbonniere-b22608243" aria-label="LinkedIn">LinkedIn</a>
+
               
             </div>
            
